<resources>
    <!--    App Name-->
    <string name="app_name">Pdf Viewer</string>

    <!--     Welcome Screen Button -->
    <string name="start_text">Start</string>
    <string name="next_text">Next</string>
    <string name="skip_text">Skip</string>

    <!--    SharedPreference Heading-->
    <string name="isFirstTimeLaunch">Is First Time Launch</string>
    <string name="MY_PREFS_NAME">@string/app_name</string>

    <!--    Splash Screen Name-->
    <string name="advance_app_name">Advance Pdf Viewer</string>

    <!--Slide Information-->
    <string name="slide_1_title">Support Storage</string>
    <string name="slide_1_desc">Its support both internal &amp; sd-card </string>
    <string name="slide_2_title">Support Offline </string>
    <string name="slide_2_desc">There is no need for internet</string>
    <string name="slide_3_title">Advance Feature</string>
    <string name="slide_3_desc">It\'s an advance pdf viewer</string>

    <!--    Bottom Sheet Dialog -->
    <string name="bottomSheetPermission_internal">Internal Permission</string>
    <string name="bottomSheetPermission_sdCard">Sd Card Permission </string>

    <string name="file_Size_Text">Data Size - 0 MB</string>

    <!--Sd Card Path SharedPreference-->
    <string name="sdCardPath">Sd Card Path</string>
    <string name="sdCardStringUri"> Sd Card String URI</string>

    <!--External Storage Path SharedPreference-->
    <string name="externalPath">External Path</string>
    <string name="externalStringUri"> External String URI</string>

    <!--Custom Dialog SD Card Permission-->
    <string name="SdCardTextView">Select Sd Card</string>
    <string name="SdCardTextView1">Please Choose Sd Card
        To Grant Permission for Write or Remove In It....(Root Directory For Sd Card )</string>

    <string name="readMore_button">Read More</string>
    <string name="continue_Button">Continue</string>

    <!--custom dialog Permission-->
    <!--custom dialog Permission-->
    <string name="activity_custom_dialog_permission_TextView1">App Permission</string>
    <string name="activity_custom_dialog_permission_TextView2">In Android 6+ Apps will ask for
        permission once you start using them.</string>
    <string name="readMoreButton">Read More</string>
    <string name="continueButton">Continue</string>

    <!--share app-->
    <string name="share_info">Hey, check This App which helps you to Delete Duplicate and Unnecessary Data from the phone -</string>

    <string name="selectSdCardMes">Only Select the Sd Card Directory</string>
    <string name="selectExternalMes">Only Select the Internal Card Directory</string>
    <string name="wrongDirectorySelected">You select the wrong directory</string>

    <!--    BottomSheetDialog more option-->
    <string name="option_openFile">Open File</string>
    <string name="option_viewFolder">View in folder</string>
    <string name="option_moreInfo">More Information</string>

    <!--    BottomSheetDialog select option-->
    <string name="option_scanFile">Scan File</string>
    <string name="option_selectFile">Select File</string>

    <string name="info_NameText">Name : </string>
    <string name="info_LocationText">Location : </string>
    <string name="info_SizeText">Size : </string>
    <string name="info_TypeText">Type : </string>
    <string name="info_ExtText">Ext : </string>
    <string name="info_CreatedText">Created : </string>
    <string name="open_text">Open</string>

    <!--Menu Item-->
    <string name="search_menuItem">Search</string>

    <!--    Option menu-->
    <string name="sort_optionMenu">Sort</string>
    <string name="sort_date_optionMenu">By Date</string>
    <string name="sort_name_optionMenu">By Name</string>
    <string name="sort_size_optionMenu">By Size</string>
    <string name="refresh_optionMenu">Refresh</string>
    <string name="filePicker_optionMenu">File Picker</string>
    <string name="clearCache_optionMenu">Clear Cache</string>
    <string name="more_optionMenu">More</string>
    <string name="more_sendFeedback_optionMenu">Send Feedback</string>
    <string name="more_rateUs_optionMenu">Rate Us</string>
    <string name="sort_shareApp_optionMenu">Share App</string>
    <string name="sort_moreApp_optionMenu">More App</string>
    <string name="welcome_slide_3_imageView">Welcome Slide 3 ImageView</string>
    <string name="scan_sd_card_text">Scan Sd Card</string>
    <string name="reportIt">There is Error Please Report It</string>
    <string name="giveUsPermission">Give us permission for further process</string>
    <string name="supportAboveSdCard">Sorry , We don\'t support sd card at this android version </string>
    <string name="title_dynamic_feature">Hey Just Click on it</string>

</resources>
