<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">


    <TextView
        android:id="@+id/SdCardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:paddingStart="10dp"
        android:text="@string/SdCardTextView"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="normal"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/SdCardTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.6"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="0sp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/SdCardTextView1"
        android:textColor="#000000"
        android:textSize="15sp"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/step_Image_View"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/steps" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/see_More_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:stateListAnimator="@null"
            android:text="@string/readMore_button"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            tools:ignore="NestedWeights,UnusedAttribute" />

        <Button
            android:id="@+id/continue_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:stateListAnimator="@null"
            android:text="@string/continue_Button"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</LinearLayout>