<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:paddingTop="60dp"
            android:paddingBottom="10dp"
            tools:ignore="RtlHardcoded">


            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/infoLayout_BackColor"
                app:layout_constraintBottom_toTopOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/info_NameText"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/infoName_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@color/infoLayout_BackColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/info_LocationText"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <TextView
                android:id="@+id/infoLocation_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@color/infoLayout_BackColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/info_SizeText"
                app:layout_constraintBottom_toBottomOf="@+id/view3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view3" />

            <TextView
                android:id="@+id/infoSize_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/view3" />

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@color/infoLayout_BackColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/info_TypeText"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view4" />

            <TextView
                android:id="@+id/infoType_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/view4" />

            <View
                android:id="@+id/view5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@color/infoLayout_BackColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/info_ExtText"
                app:layout_constraintBottom_toBottomOf="@+id/view5"
                app:layout_constraintStart_toStartOf="@+id/view5"
                app:layout_constraintTop_toTopOf="@+id/view5"
                app:layout_constraintVertical_bias="0.523" />

            <TextView
                android:id="@+id/infoExt_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/view5"
                app:layout_constraintEnd_toEndOf="@+id/view5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/view5" />

            <View
                android:id="@+id/view6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@color/infoLayout_BackColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/info_CreatedText"
                app:layout_constraintBottom_toBottomOf="@+id/view6"
                app:layout_constraintStart_toStartOf="@+id/view6"
                app:layout_constraintTop_toTopOf="@+id/view6"
                app:layout_constraintVertical_bias="0.619" />

            <TextView
                android:id="@+id/infoCreated_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/view6"
                app:layout_constraintEnd_toEndOf="@+id/view6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/view6"
                app:layout_constraintVertical_bias="0.619" />

            <View
                android:id="@+id/view7"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="13dp"
                android:background="#250F0F0F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view6" />

            <Button
                android:id="@+id/cancel_Button"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@android:string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/open_Button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view6" />

            <Button
                android:id="@+id/open_Button"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/open_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_Button"
                app:layout_constraintTop_toBottomOf="@+id/view6" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/close_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/closewindow_icon"
            android:layout_marginRight="8dp"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </FrameLayout>

</LinearLayout>
